2007-01-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-minimal.c: Undefine _itoa first.
	* stdio-common/_itoa.h: Define _itoa and _fitoa for 64-bit platforms.
	* malloc/mtrace.c: Revert last change.
	* posix/wordexp.c: Likewise.

2007-01-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/bits/byteswap.h (__bswap_32): Add __nocona__, __core2__
	and __geode__ to the list of i486+ CPUs.
	* sysdeps/x86_64/bits/byteswap.h (__bswap_32): Likewise.

2007-01-23  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/_itoa.c: Include <limits.h>.
	* stdio-common/_itowa.c: Likewise.

2007-01-22  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/_itowa.c: Don't compile _itowa for 64-bit
	platforms.
	* stdio-common/_itoa.c: Don't compile in _itoa and _fitoa for
	64-bit platforms.
	* malloc/mtrace.c (tr_where): Use _fitoa_word instead of _fitoa if
	possible.
	* posix/wordexp.c (parse_arith): Use _itoa_word instead of _itoa
	if possible.

	[BZ #3902]
	* stdio-common/_itoa.c (_itoa): Make sure at least a zero is emitted.
	* stdio-common/Makefile (tests): Add bug17.
	* stdio-common/bug17.c: New file.

2007-01-19  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/brf.c: New file.
	* iconvdata/testdata/BRF: New file.
	* iconvdata/testdata/BRF..UTF8: New file.
	Contributed by Samuel Thibault <samuel.thibault@ens-lyon.org>.
	* iconvdata/Makefile: Add rules to build BRF.
	* iconvdata/TESTS: Add BRF entry.
	* iconvdata/gconv-modules: Likewise.
	* iconvdata/tst-tables.sh: Likewise.

2007-01-18  Anton Nikishaev  <anton.nik@gmail.com>

	* wcsmbs/wchar.h (wcstoll): Fix comment, function returns value of
	type `long long int', not `long int'.
	(wcstoq): Likewise.

2007-01-18  Ulrich Drepper  <drepper@redhat.com>

	* scripts/gen-as-const.awk: Add cast to long to avoid int promotion
	of values on 64-bit platforms which are too large.

2007-01-12  Steven Munroe  <sjmunroe@us.ibm.com>
	    Joe Kerian  <jkerian@us.us.ibm.com>

	[BZ #2749]